# celo-light-client

./: .gitignore  Cargo.toml  Dockerfile.example  Makefile  README.md  docker-compose.yaml
example/: Cargo.toml
example/src/: main.rs  relayer.rs
examples/lightest-sync/: main.rs  relayer.rs  storage.rs
experiments/: README.md  main.rs
ibc/: Cargo.toml
ibc/src/: channel.rs  connection.rs  conversions.rs  error.rs  header.rs  height.rs  lib.rs  misbehaviour.rs  proof.rs  state.rs  wasm.rs
light_client/: Cargo.toml  Makefile
light_client/src/: lib.rs
light_client/src/contract/: cosmos.rs  errors.rs  execute.rs  ibc.rs  identifier.rs  mod.rs  msg.rs  query.rs  serialization.rs  store.rs  util.rs  wasm.rs
light_client/src/contract/types/: mod.rs  msg.rs  wasm.rs
light_client/tests/: common.rs  data.json  integration.rs
old/: Cargo.toml  Dockerfile.example  README.md  docker-compose.yaml
old/examples/lightest-sync/: relayer.rs
old/src/: istanbul.rs  macros.rs
old/src/contract/: mod.rs  serialization.rs
old/src/contract/types/: mod.rs  msg.rs  state.rs  wasm.rs
old/src/types/: state.rs
src/: bls.rs  errors.rs  istanbul.rs  lib.rs  macros.rs  main.rs  relayer.rs  state.rs  traits.rs
src/contract/: mod.rs  serialization.rs  store.rs  util.rs
src/contract/types/: ibc.rs  msg.rs  wasm.rs
src/crypto/: bls.rs
src/serialization/: bytes.rs  rlp.rs
src/traits/: default.rs
src/types/: header.rs  istanbul.rs  mod.rs  state.rs
types/: Cargo.toml  go.mod  go.sum
types/cmd/: generator.go  patricia.go  verifier.go
types/data/: baklava_small.json
types/src/: bls.rs  client.rs  consensus.rs  errors.rs  header.rs  integration.rs  istanbul.rs  lib.rs  main.go  proof.rs  serialization.rs  state.rs  test_proofs.rs  verify.rs
types/tests/: integration.rs
