[package]
name = "celo"
version = "0.1.0"
authors = ["Kaczanowski Mateusz <mateusz@chorus.one>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
hex = "0.4"
num = "0.3"
rlp = "0.4.6"
sha3 = "0.9.1"
rug = { version = "1.11.0", features = ["serde"] }
secp256k1 = { version = "0.19.0", features = ["bitcoin_hashes", "rand"] }
anomaly = "0.2.0"
thiserror = "1.0.23"
bls-crypto = { git = "https://github.com/celo-org/celo-bls-snark-rs.git"  }
algebra = { git = "https://github.com/celo-org/zexe", features = ["derive", "bls12_377", "ed_on_bw6_761", "parallel"] }

[dev-dependencies]
env_logger = "0.8.2"
hyper = "0.13.9"
rand = "0.6"
rand_core = "0.4"
tokio = { version = "0.2", features = ["full"] }
sled = "0.34.6"
log = "0.4"
clap = "2.33.3"

[[example]]
name = "lightest-sync"
path = "examples/lightest-sync/main.rs"
