[package]
name = "celo-ibc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = {version = "0.11", default-features = false}
rlp = {version = "0.5"}
serde = { version = "1", features = ["derive"]}
schemars = { version = "0.8"}
anomaly = { version = "0.2", default-features = false }
thiserror = { version = "1.0", default-features = false }
cosmwasm-std = { version = "0.16", default-features = false }

#ibc-proto = {git = "https://github.com/ChorusOne/ibc-rs", branch = "giulio/realcelochain", default-features = false, optional = true}
#ibc-proto = {path = "/home/giulio/src/github.com/ChorusOne/ibc-rs/proto", default-features = false, optional = true}
ibc-proto = {path = "/home/giulio/src/github.com/ChorusOne/ibc-rs/proto", default-features = false, features = ["std"]}

[features]
