[package]
name = "celo-lightclient"
version = "0.1.0"
authors = ["Kaczanowski Mateusz <mateusz@chorus.one>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = {version = "0.11"}
celo-types = {path = "../types"}
celo-ibc = {path = "../ibc"}
serde = { version = "1", features = ["derive"]}
prost = {version = "0.8", features = ["prost-derive"]}
rlp = {version = "0.5"}
base64 = { version = "0.13"}
hex = { version = "0.4"}
anomaly = { version = "0.2", default-features = false }
thiserror = { version = "1.0", default-features = false }

ibc-proto = {git = "https://github.com/ChorusOne/ibc-rs", default-features = false, branch = "giulio/celochain"}

# cosmwasm contract deps
cosmwasm-std = { version = "0.16"}
cosmwasm-derive = { version = "0.16"}
cosmwasm-storage = { version = "0.16"}
schemars = { version = "0.8"}


[dev-dependencies]
cosmwasm-vm = {version = "0.16"}


[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# Change this to [] if you don't need Windows support and want faster integration tests.
default = ["cranelift"]
# Use cranelift backend instead of singlepass. This is required for development on Windows.
cranelift = ["cosmwasm-vm/cranelift"]
# For quicker tests, cargo test --lib. for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]

