[package]
name = "celo-lightclient"
version = "0.1.0"
authors = ["Kaczanowski Mateusz <mateusz@chorus.one>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"]}
celo-ibc = {path = "../ibc"}
celo-types = {path = "../types"}
anomaly = { version = "0.2", default-features = false }
thiserror = { version = "1.0", default-features = false }
rlp = {version = "0.5"}
base64 = { version = "0.13"}

# cosmwasm contract deps
cosmwasm-std = { version = "0.16", default-features = false }
schemars = { version = "0.8"}


[dev-dependencies]
cosmwasm-vm = {version = "0.16", default-features = false }
serde_json = {version = "1.0"}

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# Change this to [] if you don't need Windows support and want faster integration tests.
default = ["cranelift"]
# Use cranelift backend instead of singlepass. This is required for development on Windows.
cranelift = ["cosmwasm-vm/cranelift"]
# For quicker tests, cargo test --lib. for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]

