[package]
name = "celo_light_client"
version = "0.1.0"
authors = ["Kaczanowski Mateusz <mateusz@chorus.one>"]
edition = "2018"

[dependencies]
cfg-if = "0.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
hex = { version = "0.4", default-features = false }
num = { version = "0.3", default-features = false }
rlp = { version = "0.4.6", default-features = false, features = ["std"] }
rlp-derive = { version = "0.1.0", default-features = false }
sha3 = { version = "0.9.1", default-features = false }
num-bigint = { version = "0.4", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
anomaly = { version = "0.2.0", default-features = false }
thiserror = { version = "1.0.23", default-features = false }
algebra = { git = "https://github.com/celo-org/zexe", default-features = false }

# why fork? - cosmwasm / wasm crashes on floating point operations.
# PR: https://github.com/celo-org/celo-bls-snark-rs/pull/209
bls-crypto = { git = "https://github.com/mkaczanowski/celo-bls-snark-rs", branch = "float_free_hash_length_fn", default-features = true }

# cosmwasm contract deps
cosmwasm-std = { version = "0.13.2", optional = true }
cosmwasm-derive = { version = "0.13.2", optional = true }
cosmwasm-storage = { version = "0.13.2", optional = true }
schemars = { version = "0.7", optional = true }
clear_on_drop = { version = "0.2.3", features = ["no_cc"], optional = true }
base64 = { version = "0.13.0", optional = true }
byteorder = { version = "1.4.3", optional = true }
prost-derive = { version = "0.7.0", optional = true }
prost = { version = "0.7.0", optional = true }

# why fork? - ics23 proofs structs are not json serializable by default.
# The forked library adds serde json serialization.
ics23 = { git = "https://github.com/ChorusOne/ics23", branch = "json_serialization", optional = true }

# why fork? - ibc-rs depends on the tonic library that doesn't compile to WASM.
# The library itself is only used to generate prost client/server definitions,
# so the forked repo simply disabled that feature
ibc = { git = "https://github.com/ChorusOne/ibc-rs", branch = "no_tonic", default-features = true , optional = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
secp256k1 = { version = "0.19.0", features = ["bitcoin_hashes", "rand"] }
env_logger = "0.8.2"
hyper = "0.13.9"
rand = "0.6"
rand_core = "0.4"
tokio = { version = "0.2", features = ["full"] }
sled = "0.34.6"
log = "0.4"
clap = "2.33.3"

cosmwasm-vm = { version = "0.7.2", default-features = false }

[profile.release]
#opt-level = 'z'
#opt-level = 3
opt-level = 2
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = ["cranelift", "wasm-contract"]
wasm-contract = ["cosmwasm-std", "cosmwasm-derive", "cosmwasm-storage", "schemars", "clear_on_drop", "base64", "ics23", "ibc", "byteorder", "prost", "prost-derive"]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]
cranelift = ["cosmwasm-vm/default-cranelift"]
singlepass = ["cosmwasm-vm/default-singlepass"]

[[example]]
name = "lightest-sync"
path = "examples/lightest-sync/main.rs"
