[package]
name = "celo-types"
version = "0.1.0"
edition = "2018"
authors = ["Kaczanowski Mateusz <mateusz@chorus.one>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"], optional = true}
ethereum-types = {version = "0.11", default-features = false, features = ["rlp"]}
web3 = {git = "https://github.com/ChorusOne/rust-web3", branch = "celo", features = ["celo"], optional = true}
#web3 = {path = "/home/giulio/src/github.com/ChorusOne/rust-web3", features = ["celo"], optional = true}
rlp = {version = "0.5"}
rlp-derive = {version = "0.1"} # RlpEncodable and RlpDecodable have issues with Vec<T> fields
hex = { version = "0.4", features = ["serde"]}
impl-rlp = {version = "0.3"}
impl-serde = {version = "0.3"}
fixed-hash = {version = "0.7", default-features = false}
anomaly = { version = "0.2", default-features = false }
thiserror = { version = "1.0", default-features = false }
sha3 = { version = "0.9", default-features = false }

[dev-dependencies]
serde_json = {version = "1.0"}
secp256k1 = { version = "0.20", features = ["bitcoin_hashes", "rand"] }
rand = { version = "0.6"}

[features]
web3_support = ["web3"]
serialize = ["serde", "ethereum-types/serialize"]
